src/main/webapp/resources/css/structure.css
/* ... */
/* Featured Dataverses*/
#carouselBlocksWrapper {border-bottom:1px solid #ddd; margin-bottom:1em;}
#featuredDataversesBlock {overflow: hidden; padding-top:.5em; border-top:1px solid #ddd;}
#featuredDataversesBlock div.customNavigation {width:4%;float:left;padding:28px 0;}
#featuredDataversesBlock div.customNavigation span.glyphicon {color:#999999;font-size:2em;}
#featuredDataversesList {width:90%; float:left;}
#featuredDataversesList .item {min-height:80px;}
#featuredDataversesList .item a {display:block;}
#featuredDataversesList .item .icon-dataverse {font-size:50px;line-height:normal;color:#c55b28;}
#featuredDataversesList .item img {max-width:160px; max-height:60px;}
.owl-carousel {margin-bottom:.5em;}
.owl-carousel .item {text-align: center; padding: 10px; border: 1px solid #e3e3e3; border-radius: 4px; margin: 10px;}

.logoPreview {max-width:80px;max-height:80px;}

#metadataFieldOptionsPanel-Block {width:70%; margin-left:60px; margin-top:.5em;}
#metadataFieldOptionsPanel-Body {padding:0; max-height:400px; overflow-y:scroll;}
#metadataFieldOptions td {vertical-align: middle;}
#metadataFieldOptions div.checkbox.child-field {padding-left:18px;}

/* -------- SEARCH -------- */
.panelLayoutBlock.panelSerchForm > .ui-widget-content {border:0;padding:0;}
input.search-input {margin-right:1em; padding:4px; display: inline-block; vertical-align: middle; width: auto;}
.panelLayoutBlock.panelSerchForm a[id$='advsearchlink'] {margin-left:1em;}

#dv-sidecolumn {width:20%;float:left;padding-right:1em;}
#dv-maincolumn {width:80%;float:left;}
#dv-maincolumn.nofacets {width:100%;float:none;}

.searchTypeButton {display:block; border:1px solid #DDD; padding:4px 0; margin-bottom: .5em;}

/*#resultsCountPaginatorBlock {overflow:hidden;}*/
#resultsCountPaginatorBlock div.results-count {width:25%; padding: 6px 12px 6px 0; margin-top: 1px; font-weight:bold;}
#resultsCountPaginatorBlock div.results-sort-pagination {width:70%; text-align:right;}
#resultsCountPaginatorBlock .pagination {margin:0;}

span.search-term-match {font-weight: bold;}
div[id$='resultsTable'] div.ui-datatable-tablewrapper table td > div > span.label {vertical-align:text-bottom; line-height: normal; margin-left:.5em;}
div[id$='resultsTable'] div.file-tags-block span.label:first-of-type {margin-left:0;}
div[id$='resultsTable'] .resultDatasetCitationBlock {display:block;margin:4px 0 .5em 60px;padding:4px;}
div[id$='resultsTable'] .resultDatasetCitationBlock span.search-term-match {font-weight: normal;}
div[id$='resultsTable'] div.card-title-icon-block span[class^='icon'],
div[id$='resultsTable'] div.card-title-icon-block span[class^='glyphicon'] {font-size:1.3em;}
div[id$='resultsTable'] div.card-title-icon-block span[class^='glyphicon'] {margin-top:3px;}
div[id$='resultsTable'] div.card-preview-icon-block {width:48px; float:left; margin:4px 12px 6px 0;}
div[id$='resultsTable'] div.card-preview-icon-block a {display:block; height:48px; line-height:48px;}
div[id$='resultsTable'] div.card-preview-icon-block img {vertical-align:middle;}
div[id$='resultsTable'] div.card-preview-icon-block span[class^='icon'],
div[id$='resultsTable'] div.card-preview-icon-block span[class^='glyphicon'] {font-size:2.8em;}

form[id$='facetType'] > div.clearfix {margin-bottom:4px;}
form[id$='facetType'] > div.clearfix:last-child {margin-bottom:0;}
form[id$='facetType'] > div.clearfix .facetTypeChBox {display:block; float:left;}
form[id$='facetType'] > div.clearfix .facetTypeChBox > div.ui-chkbox {padding-top:2px;padding-right:4px;}
form[id$='facetType'] > div.clearfix a.facetTypeLink {display:block; float:left; text-decoration:none;}

form[id$='facetType'] > div.clearfix a.facetTypeLink span {padding:4px 0px;}

form[id$='facetCategoryForm'] {margin-top:1em;}
div[id$='facetCategoryList'] ul, div[id$='facetCategoryList'] li, div[id$='facetCategoryList'] div {margin:0; padding:0; list-style: none; border:0;}
div[id$='facetCategoryList'] > div > ul > li {border-bottom:1px solid #DDD; margin-bottom:.5em;}
/*div[id$='facetCategoryList'] > div > ul > li:last-child {border-bottom:0; margin-bottom:0;}*/
div[id$='facetCategoryList'] div li div {padding:4px 0px;}
div[id$='facetCategoryList'] div li div.ui-datalist-empty-message {padding:4px 0px; font-style:italic; color:#AAA;}
div[id$='facetCategoryList'] div.ui-datalist, div[id$='facetCategoryList'] div.ui-datalist div.ui-datalist-content {padding-top:0;}
.facetCategoryName {font-weight:bold;}

.facetCategoryName, .facetLink {
-ms-word-break: break-all;

     /* Be VERY careful with this, breaks normal words wh_erever */
     word-break: break-all;

     /* Non standard for webkit */
     word-break: break-word;

-webkit-hyphens: auto;
   -moz-hyphens: auto;
        hyphens: auto;}
a.facetLink {text-decoration:none; font-size:90%;}
a.facetLink.facetSelected, a.facetTypeLink.facetSelected {font-weight:bold;}
a.facetLink.facetSelected span.glyphicon-remove {vertical-align:text-top; margin-top:1px; margin-left:.25em;}

table.ui-panelgrid.facetsMoreLess {width:100%;}
table.ui-panelgrid.facetsMoreLess tr.ui-widget-content {border:0;}
table.ui-panelgrid.facetsMoreLess td {width:50%; border:0;}
table.ui-panelgrid.facetsMoreLess td:last-child {text-align:right;}

#dv-maincolumn div.emptyResults.bg-warning {background:#FCF8F2; padding:.5em 1em;}
#resultsFacetsTopBlock {margin-bottom:.5em;}
#resultsFacetsTopBlock a.facetLink.facetSelected {display:inline-block; margin-bottom:.5em; margin-right:1em; background-color:#E6F1F6; padding-left:.3em; padding-right:.3em;}

#dv-maincolumn div.results-sort-pagination div.pagination {margin-left:1em;}
#dv-maincolumn div.results-sort-pagination.results-bottom .pagination {margin-top:0; margin-bottom:0;}

div[id$='resultsTable'] .ui-datatable-tablewrapper table > thead {display:none;}
div[id$='resultsTable'] > .ui-datatable-tablewrapper > table {border-collapse:separate; border-spacing:0 1em;}

div[id$='resultsTable'].resultsNone .ui-datatable-tablewrapper table tfoot {display:none;}
/* ... */

